--- a/css/styles.css
+++ b/css/styles.css
@@ -679,97 +679,96 @@ img{
 
 /* 
 project */
-
 .project-section {
     position: relative;
     padding-top: 150px;
     padding-bottom: 30px;
     background: url('path/to/background-image.jpg') no-repeat center center fixed;
     background-size: cover;
-  }
-  
-  .particles {
+}
+
+.particles {
     position: absolute;
     top: 0;
     left: 0;
     right: 0;
     bottom: 0;
     background: transparent;
-  }
-  
-  .container {
+}
+
+.container {
     max-width: 1200px;
     margin: 0 auto;
     padding: 0 15px;
-  }
-  
-  .project-heading {
+}
+
+.project-heading {
     font-size: 2.3em;
     font-weight: 500;
     padding-top: 10px;
-  }
-  
-  .purple {
+}
+
+.purple {
     color: #e1ad01;
-  }
-  
-  .row {
+}
+
+.row {
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
-  }
-  
-  .col {
+}
+
+.col {
     padding: 15px;
     flex: 0 0 33.3333%;
     max-width: 33.3333%;
     box-sizing: border-box;
-  }
-  
-  .project-card {
+}
+
+.project-card {
     padding-top: 50px;
     padding-bottom: 50px;
     padding-left: 25px;
     padding-right: 25px;
     height: auto;
-  }
-  
-  .project-card-view {
+}
+
+.project-card-view {
     box-shadow: 0 4px 5px 3px rgba(119, 53, 136, 0.459);
     color: white;
     background-color: transparent;
     opacity: 0.9;
     transition: all 0.5s ease;
     height: 100%;
-  }
-  
-  .project-card-view:hover {
+}
+
+.project-card-view:hover {
     transform: scale(1.02);
     overflow: hidden;
     box-shadow: 0 4px 4px 5px rgba(72, 106, 144, 0.561);
-  }
-  
-  .card-img-top {
+}
+
+.card-img-top {
     padding: 20px;
     opacity: 0.8;
     border-radius: 10px;
-  }
-  
-  .card-body {
+}
+
+.card-body {
     padding: 15px;
-  }
-  
-  .card-title {
+}
+
+.card-title {
     font-size: 1.5em;
     margin-bottom: 15px;
-  }
-  
-  .card-text {
+}
+
+.card-text {
     text-align: justify;
     margin-bottom: 15px;
-  }
-  
-  .btn-primary {
+}
+
+.btn-primary {
     color: #fff;
     background-color: #e1ad01;
     border-color: #623686;
@@ -777,18 +776,60 @@ project */
     padding: 10px 15px;
     border-radius: 5px;
     display: inline-block;
-  }
-  
-  .btn-primary:hover {
+}
+
+.btn-primary:hover {
     color: #fff;
     background-color: #e1ad01;
     border-color: #e1ad01;
-  }
-  
-  .btn:focus {
+}
+
+.btn:focus {
     outline: none;
     box-shadow: none;
-  }
+}
+
+/* Media Queries for Responsiveness */
+@media (max-width: 992px) {
+    .col {
+        flex: 0 0 50%;
+        max-width: 50%;
+    }
+
+    .project-heading {
+        font-size: 2em;
+    }
+
+    .card-title {
+        font-size: 1.3em;
+    }
+}
+
+@media (max-width: 768px) {
+    .col {
+        flex: 0 0 100%;
+        max-width: 100%;
+    }
+
+    .project-heading {
+        font-size: 1.8em;
+    }
+
+    .card-title {
+        font-size: 1.2em;
+    }
+}
+
+@media (max-width: 576px) {
+    .project-heading {
+        font-size: 1.5em;
+    }
+
+    .card-title {
+        font-size: 1em;
+    }
+}
+
 
 
   /* About Section */
